# cookiecutter-barebones-py3

./: .gitignore  LICENSE  Makefile  README.md  cookiecutter.json  tox.ini
{{ cookiecutter.project_pkg_name }}/: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  dev-requirements.txt  mypy.ini  pylintrc  pytest.ini  requirements_for_tox.txt  setup.cfg  setup.py  tox.ini
{{ cookiecutter.project_pkg_name }}/docs/: Makefile  api_docs.rst  conf.py  index.rst  installation.rst  overview.rst  usage.rst
{{ cookiecutter.project_pkg_name }}/tests/: test_placeholder.py
{{ cookiecutter.project_pkg_name }}/tests/integration/: conftest.py  fixtures.py  test_placeholder.py
{{ cookiecutter.project_pkg_name }}/tests/unit/: test_placeholder.py
{{ cookiecutter.project_pkg_name }}/{{ cookiecutter.project_module_name }}/: __init__.py  exceptions.py
