[metadata]
name = {{ cookiecutter.project_pkg_name }}
version = {{ cookiecutter.version }}

description = {{ cookiecutter.project_description }}
long_description = file: README.rst
url = 

author = {{ cookiecutter.author_name }}
author_email = {{ cookiecutter.author_email }}

license = BSD 3-Clause License

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

keywords = ''

[options]
install_requires =
    boltons >= 17.1.0, < 18.0.0

tests_require =
    # Use the separately packaged mock to avoid bugs in the embedded
    # version in some Python interpreters
    mock >= 2.0.0, < 3.0.0
    pytest >= 3.0.7, < 4.0.0
    pytest-runner >= 2.11.1, < 3.0
    pytest-cov >= 2.4.0, < 3.0.0

include_package_data =  True
packages = find:

[options.packages.find]
include = {{ cookiecutter.project_module_name }}

[aliases]
test=pytest

[tool:pytest]
addopts = --cov={{ cookiecutter.project_module_name }} --cov-report term-missing tests/ 

[wheel]
# this is a Python3 only wheel
universal = 0


